@@ -1,3 +1,8 @@
+2014-07-28  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
+	* stdio-common/tst-fmemopen.c (do_test): Refactor to use
+	test-skeleton.c.
+
 2014-07-23  Allan McRae  <allan@archlinux.org>
 
 	* po/es.po: Update Spanish translation from translation project.
